# savvy

./: .dockerignore  .gitignore  AI_STATE.md  Dockerfile  docker-compose.yml  pyproject.toml
backend/: .env.example  pyproject.toml
backend/src/apps/church/: router.py
backend/src/apps/condo/: router.py
backend/src/apps/credit/: router.py
backend/src/apps/crm/: router.py
backend/src/apps/edu/: router.py
backend/src/apps/family/: models.py  router.py  schemas.py  service.py
backend/src/apps/health/: router.py
backend/src/apps/parking/: router.py
backend/src/apps/pay/: router.py
backend/src/apps/pos/: router.py
backend/src/core/: database.py  dependencies.py
backend/src/core/models/: base.py
backend/src/gateway/: router.py
backend/src/modules/accounting/: models.py  router.py  schemas.py  service.py
backend/src/modules/apps/: models.py  permissions.py  schemas.py  service.py
backend/src/modules/auth/: dependencies.py  router.py  schemas.py  service.py
backend/src/modules/finance/: models.py  router.py  schemas.py  seed.py  service.py
backend/src/modules/geography/: models.py  router.py  schemas.py  seed_colombia.sql  service.py
backend/src/modules/groups/: models.py  router.py  schemas.py  seed.py  service.py
backend/src/modules/organization/: dependencies.py  models.py  schemas.py  service.py
backend/src/modules/people/: models.py  router.py  schemas.py  service.py
backend/tests/: test_health.py
backend/tests/test_auth/: test_login.py  test_register.py
backend/tests/test_organization/: test_org.py
docs/: README.md
(+487 files in other folders)
